<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HAM Note</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="note_add">New Note</string>
    <string name="note_delete">Delete Note</string>
    <string name="font_choose">Choose Font</string>
    <string name="image_add">Add Image</string>
    <string name="note_lock">Lock Note</string>
    <string name="note_music">Set Music</string>
    <string name="note_timer">Set Timer</string>
    <string name="note_star">Set Star</string>
    <string name="zero">0</string>
    <string name="blank"></string>
    <string name="image_show">Note Image</string>
    <string name="about">About</string>
    
    <string name="default_title_remain_character">40</string>
    <string name="des_saveButton">Save</string>
    <string name="lblBtnDel">Delete Selected Notes</string>
    
    <string name="leducanh">Lê Đức Anh</string>
    <string name="lamchihai">Lâm Chí Hải</string>
    <string name="nguyenhoangminh">Nguyễn Hoàng Minh</string>
    <string name="mssv1">51000050</string>
    <string name="mssv2">51000843</string>
    <string name="mssv3">51001955</string>

     <string-array name="themestyle">
        <item>Spring</item>
        <item>Summer</item>
        <item>Autumn</item>
        <item>Winter</item>
    </string-array>
    <string-array name="fontstyle">
        <item>Valentina font</item>
        <item>Optima font</item>
        <item>Caviar Dreams font</item>
    </string-array>
     <string-array name="fontsize">
        <item>18</item>
        <item>20</item>
        <item>22</item>
    </string-array>
</resources>
