<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#000000" >

    <item
        android:id="@+id/note_num"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/zero"/>
    
    <item
        android:id="@+id/note_add"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:icon="@drawable/note_add_36x36"
        android:title="@string/note_add"/>
    
    <item
        android:id="@+id/note_delete"
        android:orderInCategory="100"
        android:showAsAction="always"
		android:icon="@drawable/note_delete_36x36"    
        android:title="@string/note_delete"/>
    
    <item
        android:id="@+id/note_about"
        android:orderInCategory="100"
        android:showAsAction="never" 
        android:title="@string/about" />

</menu>
